Setup :: css project files

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Document</title>
+    <link rel="stylesheet" href="assets/styles/main.css" />
+    <title>weather / date/ time</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container"></div>
+    <p>کار شماره اول من</p>
+    <p class="task">نوشتن تسک جدید</p>
+  </body>
 </html>
