Completed :: creating overall layout with grid

--- a/index.html
+++ b/index.html
@@ -10,8 +10,20 @@
     <title>weather / date/ time</title>
   </head>
   <body>
-    <div class="container"></div>
-    <p>کار شماره اول من</p>
-    <p class="task">نوشتن تسک جدید</p>
+    <main class="container">
+      <aside class="settings-and-account"></aside>
+      <section class="weather-and-time"></section>
+      <section class="search-and-apps"></section>
+      <section class="todo">
+        <!-- <div class="todo__title">
+          <p>دست نویس</p>
+        </div>
+        <ul class="todo__list">
+          <div class="todo__item">
+            
+          </div>
+        </ul> -->
+      </section>
+    </main>
   </body>
 </html>
