Fixed :: grid issues

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <main class="container">
       <aside class="settings-and-account"></aside>
       <section class="weather-and-time"></section>
-      <section class="search-and-apps"></section>
+      <section class="search"></section>
+      <section class="applications"></section>
 
       <section class="todo">
         <div class="todo__title">
