Completed :: search google styles Fixed :: minor issues

--- a/index.html
+++ b/index.html
@@ -13,9 +13,23 @@
     <main class="container">
       <aside class="settings-and-account"></aside>
       <section class="weather-and-time"></section>
-      <section class="search"></section>
-      <section class="applications"></section>
 
+      <!-- ====================== Search ====================== -->
+      <section class="search">
+        <div class="search--input__wrapper">
+          <button class="search__btn">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </button>
+
+          <div>
+            <input type="text" placeholder="جستوجو در گوگل" />
+            <img src="assets/images/search.png" alt="google logo" />
+          </div>
+        </div>
+      </section>
+      <section class="apps"></section>
+
+      <!-- ====================== Todo ====================== -->
       <section class="todo">
         <div class="todo__title">
           <p>دست نویس</p>
