Created :: all styles for applications

--- a/index.html
+++ b/index.html
@@ -27,7 +27,55 @@
           </div>
         </div>
       </section>
-      <section class="apps"></section>
+
+      <!-- ====================== Search ====================== -->
+      <section class="apps">
+        <div class="app">
+          <a href="https://www.facebook.com/" target="_blank">
+            <img
+              src="assets/images/facebook.png"
+              alt="facebook logo"
+            />
+            <p>فیسبوک</p>
+          </a>
+        </div>
+        <div class="app">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="app">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="app">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="app">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="app">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="app">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="app">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="app">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="app">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="app">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="app">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="app">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+      </section>
 
       <!-- ====================== Todo ====================== -->
       <section class="todo">
