Start :: working on weather styles

--- a/index.html
+++ b/index.html
@@ -12,7 +12,53 @@
   <body>
     <main class="container">
       <aside class="settings-and-account"></aside>
-      <section class="weather-and-time"></section>
+
+      <!-- ====================== Weather, Time, Date  ====================== -->
+      <section class="weather-and-time">
+        <div class="time__part">
+          <h3>22:31</h3>
+          <h4>11 آذر</h4>
+          <div>
+            <span>18/رجب/1445</span>
+            <span>2021/dec/2</span>
+          </div>
+
+          <select>
+            <option>
+              <i class="fa-solid fa-chevron-down"></i>تایمر
+            </option>
+          </select>
+
+          <select>
+            <option>
+              اوقات شرعی
+              <i class="fa-solid fa-chevron-down"></i>
+            </option>
+          </select>
+        </div>
+
+        <div class="weather__part">
+          <div class="weather__degree">
+            <img src="assets/images/rain.png" alt="weather state" />
+            <p>12°</p>
+          </div>
+
+          <div class="weather__funny">
+            <p>بس ناجوانمردانه سرد</p>
+            <img src="assets/images/snowflake.png" alt="" />
+          </div>
+
+          <span>13° حداکثر</span>
+          <span>13° حداقل</span>
+
+          <select>
+            <option>
+              پیش بینی
+              <i class="fa-solid fa-chevron-down"></i>
+            </option>
+          </select>
+        </div>
+      </section>
 
       <!-- ====================== Search ====================== -->
       <section class="search">
