Completed :: styling weather-and-time

--- a/index.html
+++ b/index.html
@@ -37,18 +37,22 @@
 
         <div class="weather__part">
           <div class="weather__degree">
+            <h3>12°</h3>
             <img src="assets/images/rain.png" alt="weather state" />
-            <p>12°</p>
           </div>
 
           <div class="weather__funny">
             <p>بس ناجوانمردانه سرد</p>
-            <img src="assets/images/snowflake.png" alt="" />
+            <div>
+              <img src="assets/images/snowflake.png" alt="" />
+            </div>
           </div>
 
-          <span>13° حداقل</span>
-          <span></span>
-          <span>13° حداکثر</span>
+          <div class="weather__status">
+            <p><span>13</span>° حداکثر</p>
+            <p>.</p>
+            <p><span>12</span>° حداقل</p>
+          </div>
 
           <select>
             <option>
