Completed :: user & settings style

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <main class="container">
-      <aside class="settings-and-account"></aside>
+      <aside class="settings-and-account">
+        <i class="fa-solid fa-gear"></i>
+        <i class="fa-solid fa-user"></i>
+      </aside>
 
       <!-- ====================== Weather, Time, Date  ====================== -->
       <section class="weather-and-time">
