Converted :: few classes to follow BEM rules

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
       <!-- ====================== Search ====================== -->
       <section class="search">
-        <div class="search--input__wrapper">
+        <div class="search__input--wrapper">
           <button class="search__btn">
             <i class="fa-solid fa-magnifying-glass"></i>
           </button>
@@ -85,49 +85,50 @@
 
       <!-- ====================== Search ====================== -->
       <section class="apps">
-        <div class="app">
+        <div class="apps__unit">
           <a href="https://www.facebook.com/" target="_blank">
             <img
               src="assets/images/facebook.png"
               alt="facebook logo"
+              class="apps__unit--img"
             />
-            <p>فیسبوک</p>
+            <p class="apps__unit--text">فیسبوک</p>
           </a>
         </div>
-        <div class="app">
+        <div class="apps__unit">
           <i class="fa-solid fa-plus"></i>
         </div>
-        <div class="app">
+        <div class="apps__unit">
           <i class="fa-solid fa-plus"></i>
         </div>
-        <div class="app">
+        <div class="apps__unit">
           <i class="fa-solid fa-plus"></i>
         </div>
-        <div class="app">
+        <div class="apps__unit">
           <i class="fa-solid fa-plus"></i>
         </div>
-        <div class="app">
+        <div class="apps__unit">
           <i class="fa-solid fa-plus"></i>
         </div>
-        <div class="app">
+        <div class="apps__unit">
           <i class="fa-solid fa-plus"></i>
         </div>
-        <div class="app">
+        <div class="apps__unit">
           <i class="fa-solid fa-plus"></i>
         </div>
-        <div class="app">
+        <div class="apps__unit">
           <i class="fa-solid fa-plus"></i>
         </div>
-        <div class="app">
+        <div class="apps__unit">
           <i class="fa-solid fa-plus"></i>
         </div>
-        <div class="app">
+        <div class="apps__unit">
           <i class="fa-solid fa-plus"></i>
         </div>
-        <div class="app">
+        <div class="apps__unit">
           <i class="fa-solid fa-plus"></i>
         </div>
-        <div class="app">
+        <div class="apps__unit">
           <i class="fa-solid fa-plus"></i>
         </div>
       </section>
@@ -141,11 +142,11 @@
         <ul class="todo__list">
           <li class="todo__item">
             <!-- conditionally rendered -->
-            <i class="fa-solid fa-trash"></i>
+            <i class="fa-solid fa-trash todo__item--icon"></i>
 
             <div>
-              <p class="item--text">کار شماره اول من</p>
-              <div class="checkbox"></div>
+              <p class="todo__item--text">کار شماره اول من</p>
+              <div class="todo__item--checkbox"></div>
             </div>
           </li>
         </ul>
