Implemented :: get, create and delete for tasks

--- a/index.html
+++ b/index.html
@@ -140,20 +140,19 @@
           <div class="divider"></div>
         </div>
         <ul class="todo__list">
-          <li class="todo__item">
-            <!-- conditionally rendered -->
+          <!-- <li class="todo__item">
             <i class="fa-solid fa-trash todo__item--icon"></i>
 
             <div>
               <p class="todo__item--text">کار شماره اول من</p>
               <div class="todo__item--checkbox"></div>
             </div>
-          </li>
+          </li> -->
         </ul>
 
         <form class="todo__form">
           <div class="input-wrapper">
-            <button class="add-btn">+</button>
+            <button type="submit" class="add-btn">+</button>
             <input
               type="text"
               id="todo-input"
