Fixed :: weather emoji and picture are now dynamic

--- a/index.html
+++ b/index.html
@@ -44,20 +44,24 @@
         <div class="weather__part">
           <div class="weather__degree">
             <h3>12°</h3>
-            <img src="assets/images/rain.png" alt="weather state" />
+            <img
+              src="assets/images/rain.png"
+              alt="weather state"
+              class="weather__img"
+            />
           </div>
 
           <div class="weather__funny">
             <p>بس ناجوانمردانه سرد</p>
-            <div>
-              <img src="assets/images/snowflake.png" alt="" />
-            </div>
+            <div class="weather__emoji"></div>
           </div>
 
           <div class="weather__status">
-            <p><span>13</span>° حداکثر</p>
+            <p>
+              <span class="weather__status--max">13</span>° حداکثر
+            </p>
             <p>.</p>
-            <p><span>12</span>° حداقل</p>
+            <p><span class="weather__status--min">12</span>° حداقل</p>
           </div>
 
           <select>
