Edited :: weather font sizes, gaps and dropdown icons

--- a/index.html
+++ b/index.html
@@ -31,13 +31,19 @@
           </div>
 
           <div class="dropdowns">
-            <select>
-              <option>تایمر</option>
-            </select>
+            <div class="select-wrapper">
+              <select>
+                <option>تایمر</option>
+              </select>
+              <i class="fa-solid fa-angle-down"></i>
+            </div>
 
-            <select>
-              <option>اوقات شرعی</option>
-            </select>
+            <div class="select-wrapper">
+              <select>
+                <option>اوقات شرعی</option>
+              </select>
+              <i class="fa-solid fa-angle-down"></i>
+            </div>
           </div>
         </div>
 
@@ -64,12 +70,12 @@
             <p><span class="weather__status--min">12</span>° حداقل</p>
           </div>
 
-          <select>
-            <option>
-              پیش بینی
-              <i class="fa-solid fa-chevron-down"></i>
-            </option>
-          </select>
+          <div class="select-wrapper">
+            <select>
+              <option>پیش بینی</option>
+            </select>
+            <i class="fa-solid fa-angle-down"></i>
+          </div>
         </div>
       </section>
 
