Added :: scroll area to application sections

--- a/index.html
+++ b/index.html
@@ -141,6 +141,99 @@
         <div class="apps__unit">
           <i class="fa-solid fa-plus"></i>
         </div>
+        <div class="apps__unit">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="apps__unit">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="apps__unit">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="apps__unit">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="apps__unit">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="apps__unit">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="apps__unit">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="apps__unit">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="apps__unit">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="apps__unit">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="apps__unit">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="apps__unit">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="apps__unit">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="apps__unit">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="apps__unit">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="apps__unit">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="apps__unit">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="apps__unit">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="apps__unit">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="apps__unit">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="apps__unit">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="apps__unit">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="apps__unit">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="apps__unit">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="apps__unit">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="apps__unit">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="apps__unit">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="apps__unit">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="apps__unit">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="apps__unit">
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="apps__unit">
+          <i class="fa-solid fa-plus"></i>
+        </div>
       </section>
 
       <!-- ====================== Todo ====================== -->
