Created :: loading spinner

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 
       <!-- ====================== Weather, Time, Date  ====================== -->
       <section class="weather-and-time">
+        <div class="loading-container">
+          <!-- Loading spinner -->
+          <div class="spinner"></div>
+        </div>
+
         <div class="time__part">
           <h3>22:31</h3>
           <h4>11 آذر</h4>
@@ -104,93 +109,6 @@
             />
             <p class="apps__unit--text">فیسبوک</p>
           </a>
-        </div>
-        <div class="apps__unit">
-          <i class="fa-solid fa-plus"></i>
-        </div>
-        <div class="apps__unit">
-          <i class="fa-solid fa-plus"></i>
-        </div>
-        <div class="apps__unit">
-          <i class="fa-solid fa-plus"></i>
-        </div>
-        <div class="apps__unit">
-          <i class="fa-solid fa-plus"></i>
-        </div>
-        <div class="apps__unit">
-          <i class="fa-solid fa-plus"></i>
-        </div>
-        <div class="apps__unit">
-          <i class="fa-solid fa-plus"></i>
-        </div>
-        <div class="apps__unit">
-          <i class="fa-solid fa-plus"></i>
-        </div>
-        <div class="apps__unit">
-          <i class="fa-solid fa-plus"></i>
-        </div>
-        <div class="apps__unit">
-          <i class="fa-solid fa-plus"></i>
-        </div>
-        <div class="apps__unit">
-          <i class="fa-solid fa-plus"></i>
-        </div>
-        <div class="apps__unit">
-          <i class="fa-solid fa-plus"></i>
-        </div>
-        <div class="apps__unit">
-          <i class="fa-solid fa-plus"></i>
-        </div>
-        <div class="apps__unit">
-          <i class="fa-solid fa-plus"></i>
-        </div>
-        <div class="apps__unit">
-          <i class="fa-solid fa-plus"></i>
-        </div>
-        <div class="apps__unit">
-          <i class="fa-solid fa-plus"></i>
-        </div>
-        <div class="apps__unit">
-          <i class="fa-solid fa-plus"></i>
-        </div>
-        <div class="apps__unit">
-          <i class="fa-solid fa-plus"></i>
-        </div>
-        <div class="apps__unit">
-          <i class="fa-solid fa-plus"></i>
-        </div>
-        <div class="apps__unit">
-          <i class="fa-solid fa-plus"></i>
-        </div>
-        <div class="apps__unit">
-          <i class="fa-solid fa-plus"></i>
-        </div>
-        <div class="apps__unit">
-          <i class="fa-solid fa-plus"></i>
-        </div>
-        <div class="apps__unit">
-          <i class="fa-solid fa-plus"></i>
-        </div>
-        <div class="apps__unit">
-          <i class="fa-solid fa-plus"></i>
-        </div>
-        <div class="apps__unit">
-          <i class="fa-solid fa-plus"></i>
-        </div>
-        <div class="apps__unit">
-          <i class="fa-solid fa-plus"></i>
-        </div>
-        <div class="apps__unit">
-          <i class="fa-solid fa-plus"></i>
-        </div>
-        <div class="apps__unit">
-          <i class="fa-solid fa-plus"></i>
-        </div>
-        <div class="apps__unit">
-          <i class="fa-solid fa-plus"></i>
-        </div>
-        <div class="apps__unit">
-          <i class="fa-solid fa-plus"></i>
         </div>
         <div class="apps__unit">
           <i class="fa-solid fa-plus"></i>
