Added :: handy application unit styles

--- a/index.html
+++ b/index.html
@@ -100,8 +100,28 @@
 
       <!-- ====================== Search ====================== -->
       <section class="apps">
+        <!-- <div class="apps__unit">
+          <i class="fa-solid fa-grip"></i>
+          <p class="apps__unit--text">دم دستی</p>
+        </div> -->
         <div class="apps__unit">
-          <a href="https://www.facebook.com/" target="_blank">
+          <a
+            href="https://www.facebook.com/"
+            target="_blank"
+            class="apps__unit--link"
+          >
+            <i class="fa-solid fa-grip"></i>
+            <p class="apps__unit--text apps__unit--text-first">
+              دم دستی
+            </p>
+          </a>
+        </div>
+        <div class="apps__unit">
+          <a
+            href="https://www.facebook.com/"
+            target="_blank"
+            class="apps__unit--link"
+          >
             <img
               src="assets/images/facebook.png"
               alt="facebook logo"
@@ -109,9 +129,6 @@
             />
             <p class="apps__unit--text">فیسبوک</p>
           </a>
-        </div>
-        <div class="apps__unit">
-          <i class="fa-solid fa-plus"></i>
         </div>
         <div class="apps__unit">
           <i class="fa-solid fa-plus"></i>
