Added :: README.md, favicon.ico Added :: comments for html & css

--- a/index.html
+++ b/index.html
@@ -6,17 +6,23 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
+    <link
+      rel="shortcut icon"
+      href="assets/images/favicon.ico"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="assets/styles/index.css" />
-    <title>weather / date/ time</title>
+    <title>Final Project JS (2)</title>
   </head>
   <body>
     <main class="container">
+      <!-- ====================== Settings Account ====================== -->
       <aside class="settings-and-account">
         <i class="fa-solid fa-gear"></i>
         <i class="fa-solid fa-user"></i>
       </aside>
 
-      <!-- ====================== Weather, Time, Date  ====================== -->
+      <!-- ====================== Weather Time Date  ====================== -->
       <section class="weather-and-time">
         <div class="loading-container">
           <!-- Loading spinner -->
@@ -98,12 +104,8 @@
         </div>
       </section>
 
-      <!-- ====================== Search ====================== -->
+      <!-- ====================== apps ====================== -->
       <section class="apps">
-        <!-- <div class="apps__unit">
-          <i class="fa-solid fa-grip"></i>
-          <p class="apps__unit--text">دم دستی</p>
-        </div> -->
         <div class="apps__unit">
           <a
             href="https://www.facebook.com/"
